--- a/Concept paper.tex
+++ b/Concept paper.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \title{ANALYSIS AND VERIFICATION OF STOCHASTIC HYBRID SYSTEMS}
-\author{NANGWALE JOSHUA}
+\author{NANGWALE JOSHUA,WACA DAVID,\\ NANYA PHIONA,GIMBO IMELDA THRESA}
 \maketitle
 
 \section{Introduction}
