--- a/Concept paper.tex
+++ b/Concept paper.tex
@@ -6,11 +6,11 @@
 \maketitle
 
 \section{Introduction}
-Hybrid systems are systems containing both physical components which evolve continuously with time as well as discrete components that influence the continuous dynamics. Uncertainty and randomness are however inherent in most practical systems.  Stochastic Hybrid Systems are models which take into account the probabilistic evolution of systems. SHS models can be used to analyse and design complex embedded systems that operate in the presence of uncertainty and variability. A Stochastic Hybrid System (or automata) is defined as $$ H=((Q,d,X),b,\sigma,Init,\lambda,R)$$ where
+Hybrid systems are systems containing both physical components which evolve continuously with time as well as discrete components that influence the continuous dynamics. Uncertainty and randomness are however inherent in most practical systems.  Stochastic Hybrid Systems are models which take into account the probabilistic evolution of systems. SHS models can be used to analyse and design complex embedded systems that operate in the presence of uncertainty and variability.According to \cite{SHS1} a Stochastic Hybrid System (or automata) is defined as $$ H=((Q,d,X),b,\sigma,Init,\lambda,R)$$  where
 \begin{itemize}
 \item Q is a set of discrete states (modes),
 \item $d : Q \rightarrow$ N is a map that defines the continuous state space dimension for each $q \subseteq Q,$
-\item $X : Q \rightarrow R^{d(.)}$ is a map that describes the invariant foreach$ q \in Q$ as an open set $X^q \subseteq R^{d(q)},$
+\item $X : Q \rightarrow R^{d(.)}$ is a map that describes the invariant for each $ q \in Q$ as an open set $X^q \subseteq R^{d(q)},$
  \item $b : Q \times X^q \rightarrow R^{d(q)}$ and $ \sigma : Q \times X^q \rightarrow R^{d(q)*p}$ are driftvectors and dispersion matrices respectively,
 \item $ Init : B(S) \rightarrow [0; 1]$ is an initial probability measure on S,
 \item $\lambda : \bar{S} \rightarrow R_{+} $is a nonnegative transition rate function, and
@@ -20,7 +20,7 @@ The reachability problem of an automaton refers to the problem of deciding wheth
 In a safety problem, given a set of states, compute the probability that system execution from an initially safe state will lead to an unsafe set.
 
 \section{Objective}
-To investigate the analysis and verification techniques that are applied in Stochastic Hybrid Systems.
+To investigate and describe the analysis and verification techniques that are applied in Stochastic Hybrid Systems.
 
 \section{Problem statement}
 Stochastic Hybrid Systems incorporate complex dynamics, uncertainty, multiple modes of operation and support high level control specification. Verification of reachability of SHS aims at determining the probability that the system will reach a set of desirable or unsafe states.
@@ -34,5 +34,8 @@ Convergent approximation techniques solve the verification problem by approximat
 
 \section{Outcome}
 To show that reachability of a Stochastic Hybrid System can be represented by a measurable function that is interpreted as the probability that an initial state can reach a target set while avoiding an unsafe set.
+
+\bibliographystyle{plain}
+\bibliography{Conceptpaper}
 
 \end{document}
