--- a/Conceptpaper.bib
+++ b/Conceptpaper.bib
@@ -1,7 +1,12 @@
-@unpublished{
+@article{
 SHS1,
  Author={Xenofon Koutsoukos and Derek Riley},
  Title={Computational Methods for Verification of Stochastic Hybrid Systems},
- Note={Institute for Software Integrated Systems,Vanderbilt University,Nashville, TN 37235}
+ Journal={IEEE TRANSACTIONS ON SYSTEMS, MAN, AND CYBERNETICS},
+ Year={2008},
+ Volume={38},
+ Number={2},
+ Pages={385-396},
+ Month={March},
 
 }
