Final concept paper
This is the final concept paper for submission.

--- a/Concept paper.tex
+++ b/Concept paper.tex
@@ -25,6 +25,12 @@ To investigate and describe the analysis and verification techniques that are ap
 \section{Problem statement}
 Stochastic Hybrid Systems incorporate complex dynamics, uncertainty, multiple modes of operation and support high level control specification. Verification of reachability of SHS aims at determining the probability that the system will reach a set of desirable or unsafe states.
 
+\section{Research scope}
+The paper's focus is principally on science and engineering.\cite{SHS2}In a number of practical systems, the presence of a discrete number of continuously operating modes(e.g., in fault-tolerant industrial systems), the effect of uncertainty(e.g., in safety critical air traffic control systems), or both occurrences (e.g., in models of biological entities) advocate the use of a mathematical framework, such as that of an SHS, which is well suited to model such heterogenous systems. 
+
+\section{Proposed solution}
+In this paper ,we propose a probabilistic method for verification of SHS based on discrete approxiamtions focusing on reachability and saftey problems.
+
 \section{Methodology}
 \subsection{Over-approximation techniques}
 In over approximation verification techniques, each step of the algorithm produces an over approximation of the forward or backward reachable set. If the reachable set is found to be unsafe, the verification variables and approximations are tightened. Therefore multiple iterations are necessary to verify the system. There is however no guarantee that a solution will be found.
