--- a/Conceptpaper.bib
+++ b/Conceptpaper.bib
@@ -10,3 +10,15 @@ SHS1,
  Month={March},
 
 }
+@article{
+SHS2,
+ Author={R.Alur {,} C.Courcoubetis {,} N.Habwachs {,} T.A. Henzinger {,} X.Nicollin {,} A.Olivero {,} J.Sifakis and S.Yovine},
+ Title={The algorithmic analysis of hybrid systems},
+ Journal={Theoretical Computer Science},
+ Year={1995},
+ Volume={138},
+ Number={},
+ Pages={3-34},
+
+
+}
